--- a/BA_argo_doc/BA_ArgoFloats_main.tex
+++ b/BA_argo_doc/BA_ArgoFloats_main.tex
@@ -31,10 +31,10 @@
 \pagenumbering{arabic} 
 \setcounter{page}{1}
 \input{einleitung}
-\include{datengrundlage}
+%\include{datengrundlage}
+\include{grundlagen}
 \include{anforderungen}
 \include{systementwurf}
-\include{grundlagen}
 \include{realisierung}
 \include{testphase}
 \include{auswertung}
