--- a/BA_argo_doc/titlepage.tex
+++ b/BA_argo_doc/titlepage.tex
@@ -15,7 +15,7 @@
         \vfill
         {Prof. Dr. Christin Schmidt \\ Prof. Dr.-Ing. Hendrik Gärtner} 
         \vfill
-        Bachelorarbeit zur Erlangung des akademischen Grades: Bachelor of Science. (B.Sc.)\par
+        Bachelorarbeit zur Erlangung des akademischen Grades\\ Bachelor of Science (B.Sc.)\par
         {Fachbereich Wirtschaftswissenschaften II \\ Studiengang Angewandte Informatik \\ an der Hochschule für Technik und Wirtschaft Berlin}
     \end{addmargin}
 \end{titlepage}
@@ -41,12 +41,12 @@ Prüfungsbehörde vorgelegt und auch noch nicht veröffentlicht.
 
 \section*{Danksagung}
 
-An dieser Stelle möchte ich  meiner Betreuerin Frau Prof. Dr. Christin Schmidt danken. Diese unterstützte mich stets tatkräftig und half mir, diese Abschlussarbeit auszuarbeiten. Auch Herrn Prof. Dr.-Ing. Gärtner möchte ich dafür danken, dass er sich dazu bereit erklärt hat, diese Arbeit zu betreuen.
+An dieser Stelle möchte ich  meiner Betreuerin Frau Prof. Dr. Christin Schmidt danken. Diese unterstützte mich stets tatkräftig. Auch Herrn Prof. Dr.-Ing. Gärtner möchte ich dafür danken, dass er sich dazu bereit erklärt hat, diese Arbeit zu betreuen.
 
 Außerdem möchte ich auch  meinen Eltern danken. Auch wenn diese heute nicht mehr unter uns sind, so waren sie es doch, die den Keim gelegt haben, der mich dazu befähigte den Weg bis zu dieser Stelle zu gehen.
 
-Zu danken habe ich auch Robert M. Pirsig. Sein Buch "`Zen und die Kunst ein Motorrad zu warten."' begleitete mich bei der Entwicklung dieser Arbeit und inspirierte mich immer wieder aufs Neue. Ich könnte mir kein besseres Buch als Begleitung für eine schriftliche Ausarbeitung vorstellen.
+Zu danken habe ich auch Robert M. Pirsig. Sein Buch "`Zen und die Kunst ein Motorrad zu warten"' begleitete mich bei der Entwicklung dieser Arbeit und inspirierte mich immer wieder aufs Neue. Ich könnte mir kein besseres Buch als Begleitung für eine schriftliche Ausarbeitung vorstellen.
 
-Zuletzt und doch ganz besonders richtet sich mein Dank an  Denise Peth. Diese begleitete mich auf dem Weg dieser Ausarbeitung und stand mir stets mir Rat und Tat zur Seite.
+Zuletzt und doch ganz besonders richtet sich mein Dank an  Denise Peth. Diese begleitete mich auf dem Weg dieser Ausarbeitung und stand mir stets mit Rat und Tat zur Seite.
 
 
